# Design-Patterns-C

./: .gitmodules  CMakeLists.txt  README.md  bwindow.c  composite.c  igraphics.c  igraphics.h
Command/: CMakeLists.txt  command.c  drawcommand.c  drawcommand.h  icommand.c  icommand.h  printcommand.c  printcommand.h
Composite/: CMakeLists.txt  bcircle.c  bcircle.h  bdot.c  bdot.h  bwindow.h  composite.c
Decorator/: CMakeLists.txt  armordecorator.c  armordecorator.h  baseenemy.c  baseenemy.h  decorator.c  enemydecorator.c  enemydecorator.h  ienemy.c  ienemy.h  shielddecorator.c  shielddecorator.h
Decorator/blib/: btype.c
Observer/: CMakeLists.txt  bpublisher.c  bpublisher.h  bsubscriber.c  bsubscriber.h  iobservable.c  iobservable.h  iobserver.c  iobserver.h  main.c
State/: CMakeLists.txt  bstate.c  bstate.h  drawstate.c  drawstate.h  printstate.c  printstate.h  state.c  statemachine.c  statemachine.h
blib/: CMakeLists.txt  blist.c  blist.h  bobject.c  btype.c  btype.h
